--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "imc-prosperity-2-visualizer",
+  "name": "imc-prosperity-3-visualizer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,105 +15,51 @@
     "fix:prettier": "prettier --write '**/*.{ts,tsx,cjs,css,html,json,yml}'"
   },
   "dependencies": {
-    "@mantine/code-highlight": "^7.7.1",
-    "@mantine/core": "^7.7.1",
-    "@mantine/dropzone": "^7.7.1",
-    "@mantine/hooks": "^7.7.1",
-    "@tabler/icons": "^3.1.0",
-    "@tabler/icons-react": "^3.1.0",
-    "axios": "^1.6.8",
-    "date-fns": "^3.6.0",
-    "highcharts": "^11.4.0",
+    "@mantine/code-highlight": "^7.17.0",
+    "@mantine/core": "^7.17.0",
+    "@mantine/dropzone": "^7.17.0",
+    "@mantine/hooks": "^7.17.0",
+    "@tabler/icons": "^3.30.0",
+    "@tabler/icons-react": "^3.30.0",
+    "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
+    "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.1",
     "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "zustand": "^4.5.2"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "react-router-dom": "^7.2.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.0",
-    "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23",
-    "@typescript-eslint/eslint-plugin": "^7.5.0",
-    "@typescript-eslint/parser": "^7.5.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-config-prettier": "^9.1.0",
+    "@eslint/js": "^9.21.0",
+    "@types/lodash": "^4.17.15",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-formatter-codeframe": "^7.32.1",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react": "^7.34.1",
-    "postcss": "^8.4.38",
-    "postcss-preset-mantine": "^1.13.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.2.5",
-    "typescript": "^5.4.3",
-    "vite": "^5.2.7"
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/recommended",
-      "plugin:react/recommended",
-      "plugin:react/jsx-runtime",
-      "plugin:import/errors",
-      "plugin:import/warnings",
-      "plugin:import/typescript",
-      "prettier"
-    ],
-    "plugins": [
-      "@typescript-eslint",
-      "import"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaVersion": "latest",
-      "sourceType": "module"
-    },
-    "env": {
-      "browser": true,
-      "node": true
-    },
-    "rules": {
-      "@typescript-eslint/no-explicit-any": "off",
-      "@typescript-eslint/explicit-member-accessibility": "error",
-      "@typescript-eslint/no-inferrable-types": "off",
-      "@typescript-eslint/no-var-requires": "off",
-      "@typescript-eslint/explicit-function-return-type": [
-        "error",
-        {
-          "allowExpressions": true
-        }
-      ],
-      "@typescript-eslint/explicit-module-boundary-types": [
-        "error",
-        {
-          "allowArgumentsExplicitlyTypedAsAny": true
-        }
-      ],
-      "import/order": [
-        "error",
-        {
-          "alphabetize": {
-            "order": "asc",
-            "caseInsensitive": true
-          }
-        }
-      ],
-      "sort-imports": [
-        "error",
-        {
-          "ignoreCase": true,
-          "ignoreDeclarationSort": true
-        }
-      ]
-    }
+    "prettier": "^3.5.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.25.0",
+    "vite": "^6.1.1"
   },
   "prettier": {
     "printWidth": 120,
     "singleQuote": true,
     "trailingComma": "all",
     "arrowParens": "avoid"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "esbuild"
+    ]
   }
 }
